# foxhole-ml

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
foxhole/: war_data.py
foxhole/db/: __init__.py  schema.sql
