[tool.poetry]
name = "foxhole-ml"
version = "1.0.0"
description = "Foxhole live War API experimental machine learning models utilizing Postgres ML"
authors = ["Andrew Clark"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytz = "^2023.3"
peewee = "^3.16.2"
psycopg2-binary = "^2.9.5"
logging = "^0.4.9.6"
types-pytz = "^2023.3.0.0"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
poethepoet = "*"
pre-commit = "*"
pytest = "*"
types-psycopg2 = "^2.9.21.2"
types-pytz = ">=2022.6.0.1"
types-requests = "^2.28.11.4"

[tool.poe.tasks]
lint = { cmd = "pre-commit run --all-files", help = "Run linters and formatters" }
test = { cmd = "pytest tests", help = "Run tests" }

[tool.black]
line-length = 105

[tool.isort]
line_length = 105
profile = "black"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
